# decky-prysm

./: .gitignore  LICENSE  LICENSE.md  Makefile  README.md  decky.pyi  deploy.sh  install.sh  main.py  package.json  plugin.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml  release.yml
assets/: viewer-webrtc.html  viewer.html
backend/: Makefile  mediamtx.yml  pw_capture.c  stream_server.py  test_fork_capture.py
backend/prysm-engine/: Cargo.toml
backend/prysm-engine/src/: capture.rs  main.rs  server.rs  webrtc_relay.rs
backend/src/prysm-engine/src/: capture.rs  stats.rs
defaults/: settings.json
future/prysm-engine/: Cargo.toml
research/: capture_daemon.py  pw_capture.c  test_exec_capture.py  test_fork_capture.py  test_pw_connect.py
server/: stream_server.py
src/: index.tsx
src/components/: DiscordPanel.tsx  SettingsPanel.tsx  StatusBadge.tsx  ViewerPanel.tsx
src/hooks/: usePrysmStatus.ts
src/lib/: backend.ts
