[package]
name = "prysm-engine"
version = "0.1.0"
edition = "2021"
description = "Low-latency screen capture + WebRTC streaming engine for Steam Deck"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server for WHEP signaling + viewer page
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# WebRTC
webrtc = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Process management (for FFmpeg in MVP phase)
nix = { version = "0.29", features = ["signal", "process"] }
bytes = "1.11.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
